<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardviewzkr"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#fafafa"
    app:cardCornerRadius="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textzkradd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="8dp"
                android:enabled="false"
                android:inputType="textMultiLine|textLongMessage"
                android:padding="8dp"
                android:text="@string/addauthor"
                android:textColor="#1a0101"
                android:textDirection="anyRtl"
                android:textSize="26sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textzkradd"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/naGR"
                android:inputType="textMultiLine|textLongMessage|textCapSentences"
                android:padding="10dp"
                android:textColor="#0b490b"
                android:textDirection="anyRtl"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/addAuth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textname"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_margin="12dp"
                android:background="@drawable/btndaidsgnmosbgr"
                android:gravity="center"
                android:text="@string/ad"
                android:textColor="#fff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/cancelAuth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textname"
                android:layout_alignParentLeft="true"
                android:layout_gravity="right"
                android:layout_margin="12dp"
                android:background="@drawable/btndaidsgnmosbgr"
                android:gravity="center"
                android:text="@string/can"
                android:textColor="#fff"
                android:textSize="20sp" />

        </RelativeLayout>
    </ScrollView>
</android.support.v7.widget.CardView>