<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containersign"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sblue1"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <android.support.v7.widget.CardView
                android:id="@+id/cUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:padding="8dp"
                app:cardBackgroundColor="@color/common_google_signin_btn_text_dark_disabled"
                app:cardCornerRadius="25dp">

                <EditText
                    android:id="@+id/userNa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                    android:gravity="left"
                    android:hint="User Name"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#D6C8B9"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cUser"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:padding="8dp"
                app:cardBackgroundColor="@color/common_google_signin_btn_text_dark_disabled"
                app:cardCornerRadius="25dp">

                <EditText
                    android:id="@+id/emailsign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"

                    android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                    android:gravity="left"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#D6C8B9"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cEmail"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:padding="8dp"
                app:cardBackgroundColor="@color/common_google_signin_btn_text_dark_disabled"
                app:cardCornerRadius="25dp">

                <EditText
                    android:id="@+id/passwordsign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"

                    android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                    android:gravity="left"
                    android:hint="Password"
                    android:inputType="numberPassword"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#D6C8B9"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cPassConf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cPass"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:padding="8dp"
                app:cardBackgroundColor="@color/common_google_signin_btn_text_dark_disabled"
                app:cardCornerRadius="25dp">

                <EditText
                    android:id="@+id/conpasswordsign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                    android:gravity="left"
                    android:hint="Confirm Password"
                    android:inputType="numberPassword"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#D6C8B9"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/csignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cPassConf"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:padding="8dp"
                app:cardBackgroundColor="@color/common_google_signin_btn_text_dark_disabled"
                app:cardCornerRadius="25dp">

                <TextView
                    android:id="@+id/signbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cPassConf"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:onClick="sign_up"
                    android:padding="10dp"
                    android:text="@string/siup"
                    android:textColor="#040952"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/haveaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/csignin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="serif-monospace"
                android:padding="3dp"
                android:text="@string/hacc"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/clog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/haveaccount"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:padding="8dp"
                app:cardBackgroundColor="@color/common_google_signin_btn_text_dark_disabled"
                app:cardCornerRadius="25dp">

                <TextView
                    android:id="@+id/logbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/haveaccount"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:onClick="log_in"
                    android:padding="10dp"
                    android:text="@string/si"
                    android:textColor="#040952"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/signwith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/clog"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="serif-monospace"
                android:padding="3dp"
                android:text="@string/orsup"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/signwithgoogl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signwith"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:onClick="sign_WithGoogle"
                android:padding="3dp"
                android:src="@drawable/goo" />
        </RelativeLayout>
    </ScrollView>
</FrameLayout>